--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,11 @@
 html {
-  --section-background-color: linear-gradient(
-    to bottom left,
-    rgba(17, 16, 16, 0.582),
-    rgba(12, 8, 24, 0.904)
-  );
+  --section-background-color: linear-gradient(to bottom left,
+      rgba(17, 16, 16, 0.582),
+      rgba(12, 8, 24, 0.904));
 
-  --image-gradient: linear-gradient(
-    to bottom left,
-    rgba(17, 16, 16, 0.678),
-    rgba(12, 10, 22, 0.863)
-  );
+  --image-gradient: linear-gradient(to bottom left,
+      rgba(17, 16, 16, 0.678),
+      rgba(12, 10, 22, 0.863));
 
   --imp-text-color: #c770f0;
 }
@@ -32,7 +28,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: black;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -146,10 +142,12 @@ button:focus {
     font-size: 1.4rem !important;
     background-color: #181a27 !important;
   }
+
   .navbar-nav .nav-item a::after {
     display: none !important;
   }
 }
+
 .navbar-brand {
   color: rgb(250, 250, 250) !important;
 }
@@ -209,10 +207,14 @@ button:focus {
 /* Home section */
 /* --------- */
 .wave {
-  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
-  animation-duration: 2.1s; /* Change to speed up or slow down */
-  animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  animation-name: wave-animation;
+  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.1s;
+  /* Change to speed up or slow down */
+  animation-iteration-count: infinite;
+  /* Never stop waving :) */
+  transform-origin: 70% 70%;
+  /* Pivot around the bottom-left palm */
   display: inline-block;
 }
 
@@ -220,28 +222,38 @@ button:focus {
   0% {
     transform: rotate(0deg);
   }
+
   10% {
     transform: rotate(14deg);
-  } /* The following five values can be played with to make the waving more or less extreme */
+  }
+
+  /* The following five values can be played with to make the waving more or less extreme */
   20% {
     transform: rotate(-8deg);
   }
+
   30% {
     transform: rotate(14deg);
   }
+
   40% {
     transform: rotate(-4deg);
   }
+
   50% {
     transform: rotate(10deg);
   }
+
   60% {
     transform: rotate(0deg);
-  } /* Reset for the last half to pause */
+  }
+
+  /* Reset for the last half to pause */
   100% {
     transform: rotate(0deg);
   }
 }
+
 #tsparticles {
   position: fixed !important;
   background-repeat: no-repeat !important;
@@ -251,33 +263,50 @@ button:focus {
 }
 
 .home-header {
-  padding-top: 80px !important;
+  padding-top: 14rem !important;
 }
 
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
+  background-color: black;
+  /* background-image: var(--image-gradient), url(./Assets/home-bg.jpg); */
   background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 30px !important;
+  padding-bottom: 0px !important;
   padding-top: 30px !important;
 }
 
+/* .img-fluid{
+  max-height: 450px;
+  z-index: 23;
+} */
+.home-animation {
+  margin-top: 0;
+  align-items: center;
+  margin: auto;
+  height: 50rem;
+  width: 100%;
+  overflow: hidden;
+}
+
 .home-content {
-  padding: 9rem 0 2rem !important;
+  padding: 10rem 0 0rem !important;
   color: whitesmoke;
   text-align: left;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .heading {
-  font-size: 2.4em !important;
-  padding-left: 50px !important;
+  font-size: 3.4em !important;
+  padding-left: 0rem !important;
+
 }
 
 .heading-name {
-  font-size: 2.5em !important;
-  padding-left: 45px !important;
+  font-size: 4.5em !important;
+  padding-left: 0px !important;
 }
 
 .main-name {
@@ -285,23 +314,75 @@ button:focus {
 }
 
 .Typewriter__wrapper {
-  font-size: 2.2em !important;
+  font-size: 3em !important;
   color: #be6adf !important;
   font-weight: 600 !important;
 }
+
 .Typewriter__cursor {
   font-size: 2.4em !important;
   color: #b562d6 !important;
 }
 
+.type-div {
+  padding-top: 10rem;
+  padding-bottom: 20;
+  text-align: "left";
+}
+
+@media only screen and (max-width: 992px) {
+  .type-div {
+    /* padding-top: 1rem !important; */
+    padding-bottom: 4rem !important;
+  
+    
+    /* text-align: center !important; */
+  }
+  
+  .home-header {
+    padding-top: 0rem !important;
+  }
+
+  .home-animation {
+    padding-top: 1.5rem;
+    height: 22rem;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .home-content {
+    padding: 0 !important;
+  }
+
+  .home-both-col {
+
+    flex-direction: column-reverse;
+  }
+
+  .heading {
+    font-size: 1.5rem !important;
+    text-align: center;
+
+  }
+
+  .heading-name {
+    font-size: 3rem !important;
+    text-align: center;
+  }
+}
+
 @media (max-width: 767px) {
+
   .Typewriter__wrapper {
-    font-size: 1.4em !important;
+    font-size: 1.5rem !important;
     font-weight: 500 !important;
     position: absolute !important;
+
   }
+
   .Typewriter__cursor {
     display: none !important;
+
   }
 }
 
@@ -317,23 +398,32 @@ button:focus {
   }
 }
 
+
+
+
 .home-about-section {
   position: relative;
+  z-index: -2;
+  background-color: black;
+  background-position: top center;
+  background-repeat: no-repeat;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
 }
 
 .home-about-description {
   color: white !important;
-  padding-top: 100px !important;
+  /* padding-top: 100px !important; */
   padding-bottom: 20px !important;
   text-align: center;
 }
 
 .home-about-body {
-  padding-top: 50px;
-  font-size: 1.2em !important;
-  text-align: left;
+  padding-top: 0px;
+  font-size: 2.2em !important;
+  text-align: center;
+
+  font-weight: 600;
 }
 
 .home-about-social {
@@ -348,6 +438,16 @@ button:focus {
   display: inline-block !important;
   position: relative !important;
   padding-inline-start: 0 !important;
+}
+
+@media only screen and (max-width: 992px) {
+  .home-about-body {
+    padding-top: 0px;
+    font-size: 1rem !important;
+    text-align: center;
+  
+   
+  }
 }
 
 .home-social-icons {
@@ -405,8 +505,9 @@ button:focus {
   background-color: rgb(10, 4, 22);
   bottom: 0 !important;
   padding-top: 10px !important;
-  padding-bottom: 8px !important ;
+  padding-bottom: 8px !important;
 }
+
 .footer-copywright {
   text-align: center !important;
 }
@@ -432,6 +533,7 @@ button:focus {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
+
 .footer-icons {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
@@ -441,14 +543,19 @@ button:focus {
 .blockquote-footer {
   color: #a588c0 !important;
 }
+
 /* --------- */
 /* Projects */
 /* --------- */
 .project-section {
   position: relative !important;
   padding-top: 150px !important;
-  padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
+  padding-bottom: 100px !important;
+  background-color: black;
+  /* z-index: -4; */
+
+
+  /* background-image: var(--section-background-color) !important; */
 }
 
 .project-card {
@@ -467,6 +574,7 @@ button:focus {
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
 }
+
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
@@ -527,10 +635,12 @@ button:focus {
   background-color: #6d20c5d7 !important;
   border-color: #6d20c5d7 !important;
 }
+
 .btn:focus {
   outline: none !important;
   box-shadow: none !important;
 }
+
 .project-heading {
   color: white !important;
   font-size: 2.3em !important;
@@ -546,11 +656,26 @@ button:focus {
   position: relative !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
+
+  /* background-color: black; */
+  /* background-image: var(--section-background-color) !important; */
   color: white !important;
 }
+@media only screen and (max-width: 992px) {
+  .about-section {
+  padding-top: 50px !important;
+  padding-bottom: 40px !important;
 
+  }
+  .project-heading {
+  font-size: 2.4rem !important;
+  padding-bottom: 10px !important;
+
+
+  }
+}
 .tech-icons {
+
   font-size: 4.5em !important;
   margin: 15px !important;
   padding: 10px !important;
@@ -569,14 +694,27 @@ button:focus {
   .tech-icons {
     margin: 10px !important;
   }
+
+  .tech-iconwidth {
+    width: 8rem !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .tech-iconwidth {
+    width: 8rem !important;
+  }
 }
 
 .tech-icons:hover {
+
   transform: scale(1.05) !important;
   overflow: hidden !important;
   border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
 }
+
 .tech-icon-images {
+
   padding: 20px !important;
   line-height: 1.6 !important;
 }
@@ -598,6 +736,7 @@ button:focus {
     padding-top: 0 !important;
   }
 }
+
 /* --------- */
 /* Resume */
 /* --------- */
@@ -606,6 +745,7 @@ button:focus {
   position: relative !important;
   padding-top: 110px !important;
   padding-bottom: 30px !important;
+  background-color: black;
   background-image: var(--section-background-color) !important;
   color: white !important;
 }
@@ -635,6 +775,7 @@ button:focus {
     padding-left: 15px !important;
   }
 }
+
 .resume .resume-title {
   font-size: 2em;
   font-weight: 700;
@@ -711,10 +852,12 @@ button:focus {
   animation-fill-mode: forwards;
   animation-duration: 0.85s;
 }
+
 @keyframes likeAnimation {
   0% {
     transform: scale(1.5);
   }
+
   100% {
     transform: scale(1);
   }
@@ -738,6 +881,101 @@ button:focus {
   background-color: #a24dd386 !important;
   border-color: #a24dd386 !important;
 }
+
 .fork-btn-inner::after {
   display: none !important;
+}
+
+
+
+
+
+
+
+
+.swiper {
+  margin-top: 00rem;
+  width: 100%;
+  height: 40rem;
+}
+
+.swiper-slide {
+  text-align: center;
+  /* font-size: 18px; */
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+.swiper-button-prev {
+  color: #68187a !important;
+}
+
+.swiper-button-next {
+  color: #68187a !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: rebeccapurple !important;
+  border: solid 1px rebeccapurple !important;
+}
+
+.DesignDevApp-content-title {
+  font-family: 'Alata', sans-serif;
+  font-weight: 500;
+  font-size: 2.5rem;
+  color: white;
+}
+
+.DesignDevApp-img {
+  height: 10em;
+  width: 10em;
+  background: none;
+  margin-bottom: 2rem;
+  border-radius: 100px;
+  border: solid 3px rebeccapurple;
+  margin-top: 4rem;
+
+}
+
+.DesignDevApp-description {
+  color: rgb(226, 226, 226);
+  font-style: italic;
+  padding-left: 4em;
+  padding-right: 4em;
+  padding-top: 1rem;
+  font-size: 1.2rem;
+
+}
+
+@media only screen and (max-width: 992px) {
+  .swiper-button-prev {
+    color: #68187a !important;
+  }
+  
+  .swiper-button-next {
+    color: #68187a !important;
+  }
+  .DesignDevApp-img {
+    margin-top: 2rem;
+  }
+  .mySwiper{
+    margin: 0;
+}
+.DesignDevApp-content-title{
+    font-size: 1.5rem;
+}
+.DesignDevApp-description{
+    font-size: .7em;
+    padding: 5em;
+    padding-top: .5em !important;
+    padding-bottom: 0 !important;
+}
 }
